--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@expo/webpack-config": "^18.1.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/react": "~18.2.14",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -22,6 +24,7 @@
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
     "react-native-web": "~0.19.6",
+    "react-redux": "^9.0.3",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
