--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.0.3",
     "typescript": "^5.1.3"
